# bcachefs-tools

./: .bcachefs_revision  .gitignore  .travis.yml  INSTALL  Makefile  bcachefs-principles-of-operation.tex  bcachefs.8  bcachefs.c  cmd_attr.c  cmd_data.c  cmd_debug.c  cmd_device.c  cmd_format.c  cmd_fs.c  cmd_fsck.c  cmd_fusemount.c  cmd_migrate.c  cmd_subvolume.c  cmds.h  crypto.c  default.nix  flake.nix  libbcachefs.c  libbcachefs.h  mount.bcachefs.sh  qcow2.c  smoke_test  tools-util.c  tools-util.h
.github/workflows/: nixos.yml
debian/: bcachefs-tools.postinst  bcachefs-tools.postrm  changelog  control  copyright  watch
doc/: bcachefs.5.rst.tmpl  bcachefs.5.txt  macro2rst.py  opts_macro.h
doc/autogen/: bcachefs.5.rst  gen.h  gen.sh
include/crypto/: chacha.h  skcipher.h
include/linux/: atomic.h  bio.h  bit_spinlock.h  (+47 more)
initramfs/: hook
libbcachefs/: alloc_background.c  alloc_foreground.c  bcachefs.h  bcachefs_format.h  bkey.c  bkey_sort.c  btree_cache.c  btree_gc.c  btree_gc.h  btree_io.c  btree_iter.c  btree_key_cache.c  btree_types.h  btree_update_interior.c  btree_update_leaf.c  buckets.c  buckets.h  chardev.c  darray.h  ec_types.h  extents.c  fs-io.c  fs.c  fsck.c  inode.c  journal.c  journal_io.c  k-eytzinger.h  move.c  movinggc.c  opts.c  opts.h  rebalance.c  recovery.c  replicas.c  replicas.h  s128.h  siphash.c  subvolume.c  super-io.c  (+4 more)
linux/: bio.c  blkdev.c  generic-radix-tree.c  kstrtox.c  kthread.c  mempool.c  preempt.c  rhashtable.c  sched.c  semaphore.c  shrinker.c  siphash.c  six.c  string.c  timer.c  workqueue.c  zstd_compress_module.c  zstd_decompress_module.c
mount/: build.rs
nix/: bcachefs-kernel.nix  bcachefs.rev.sha256  overlay.nix
packaging/: README  bcachefs-tools.spec  userspace-rcu.spec
rust-src/bch_bindgen/: .gitignore  Cargo.toml  build.rs  default.nix
rust-src/bch_bindgen/src/: bcachefs.rs  keyutils.rs  lib.rs  libbcachefs_wrapper.h  rs.rs
rust-src/mount/: .gitignore  Cargo.toml  default.nix  rustfmt.toml
rust-src/mount/src/: filesystem.rs  key.rs  lib.rs  main.rs
tests/: conftest.py  test_basic.py  test_fixture.py  test_fuse.py  test_helper.c  test_helper_trick.c  util.py  valgrind-suppressions.txt
(+4 files in other folders)
