[package]
name = "bch_bindgen"
version = "0.1.0"
authors = [ "Kayla Firestack <dev@kaylafire.me>", "Yuxuan Shui <yshuiv7@gmail.com>" ]
edition = "2018"

[lib]
crate-type = ["lib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.26"
anyhow = "1.0"
udev = "0.4"
uuid = "0.8"
bitfield = "0.13"
memoffset = "0.5"
byteorder = "1.3"
tracing-attributes = "0.1.15"
libc = "0.2.69"
gag = "1.0.0"


[build-dependencies]
pkg-config = "0.3"
bindgen = { version = "0.59.1", default-features = false }
