[package]
name = "bcachefs-mount"
version = "0.1.0"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
clap = { version = "2.33", features = [ "wrap_help" ] }
env_logger = { version = "0.7", default-features = false }
anyhow = "1.0"
udev = "0.4"
uuid = "0.8"
libc = "0.2.69"
gag = "0.1"
bitfield = "0.13"
memoffset = "0.5"
getset = "0.1"
itertools = "0.9"
structopt = "0.3"
parse-display = "0.1"
errno = "0.2"
either = "1.5"
rpassword = "4"
byteorder = "1.3"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
pkg-config = "0.3"
bindgen = { version = "0.53", default-features = false }
