[package]
name = "bcachefs-mount"
version = "0.3.1"
authors = ["Yuxuan Shui <yshuiv7@gmail.com>", "Kayla Firestack <dev@kaylafire.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.26"
tracing-log = "0.1.2"
tracing-subscriber = "0.2.20"
tracing-attributes = "0.1.15"
clap = { version = "2.33", features = [ "wrap_help" ] }
anyhow = "1.0"
libc = "0.2.69"
uuid = "0.8"
udev = "0.4"
gag = "1.0.0"
getset = "0.1"
itertools = "0.9"
structopt = "0.3.23"
parse-display = "0.1"
errno = "0.2"
either = "1.5"
rpassword = "4"
camino = "1.0.5"
bch_bindgen = { path = "../bch_bindgen" }
byteorder = "1.3"

